close write channel after sending new password when generating new key

This fixes a hang with GnuPG 2.3

BUG: 457738
FIXED-IN: 22.12.1
(cherry picked from commit c11dadfb46b63563c70e1d33834a549c1de077e7)